<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/hotel"
            android:icon="@drawable/hotel"
            android:title="@string/hotel" />
        <item
            android:id="@+id/restaurant"
            android:icon="@drawable/restaurant"
            android:title="@string/restaurant" />
        <item
            android:id="@+id/places"
            android:icon="@drawable/place"
            android:title="@string/places_to_visit" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/about"
            android:title="@string/about" />
    </group>

</menu>
